fix vertical align in tables

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -92,3 +92,7 @@
 .navbar a.brand {
   padding: 16px 29px 14px 20px;
 }
+
+table.table.table-striped thead tr th {
+  vertical-align: top;
+}
